refractoring of event overlay media display by shifting this function into runsim js + utilisation of native html5 media implementation over our button controllers + css fixes
Former-commit-id: 3e3634c254ca7de5b577091ae4c869d97b7afcaf

--- a/RedR-Disaster-Simulator/DisasterSimulatorNodeJSServer/resources/styles/disaster-sim-style.css
+++ b/RedR-Disaster-Simulator/DisasterSimulatorNodeJSServer/resources/styles/disaster-sim-style.css
@@ -681,7 +681,7 @@ ul.libraryList {
 }
 
 .eventViewerHQ{
-    min-width: 80%;
+    width: 80%;
     max-height: 60vh;
 }
 
@@ -734,7 +734,7 @@ ul.libraryList {
     margin: auto;
     display: flex;
     width: 45%;
-    height: 75vh;
+    height: 80vh;
 
     position: absolute;
     margin-left: 50%;
